--- a/ProjectSelect.html
+++ b/ProjectSelect.html
@@ -38,12 +38,12 @@
 
     <section class="page-content">
         <a href="Projet_Cours.html">
-            <h1>- Projet/Travaux de Cours</h1>
+            <h1>- Projets/Travaux de Cours</h1>
         </a>
         <br>
 
         <a href="Projets_Perso.html">
-            <h1>- Projet/Travaux Personnels</h1>
+            <h1>- Projets/Travaux Personnels</h1>
         </a>
 
 
