--- a/Project_TutoUnity.html
+++ b/Project_TutoUnity.html
@@ -40,11 +40,11 @@
         <header>
             <h1>Mon auto-apprentissage de Unity</h1>
             <h3>Résumé</h3>
-            <p>Cherchant à me lancer dans le développement de jeux vidéos, je me suis lancé dans l'apprentissage de
-                Unity (et par la même occasion de C#). En suivant un tutoriel complet de plus d'une trentaines de vidéos
-                postés sur la chaîne YouTube "Tuto Unity FR" qui consiste en la création d'un jeu vidéo étape par étape
-                allant de la création des niveaux et du joueurs jusqu'à la finalisation avec la création de moyens de
-                sauvegarder et de créer un inventaire au joueur. Ce tutoriel est un indispensable pour moi qui n'avait
+            <p>Cherchant à me lancer dans le développement de jeux vidéos, j'ai débuté l'apprentissage de
+                Unity (et par la même occasion de C#). En suivant un tutoriel complet de plus d'une trentaine de vidéos
+                postées sur la chaîne YouTube "Tuto Unity FR" qui consiste en la création d'un jeu étape par étape
+                allant de la création des niveaux et du joueur jusqu'à la finalisation avec la création de moyens de
+                sauvegarder et de créer un inventaire au joueur. Ce tutoriel est un indispensable pour moi qui n'avais
                 jusque là jamais développé de jeux ayant recourt à un affichage graphique. </p>
             <br>
             <p>Voici le tutoriel que je suis: </p>
@@ -52,11 +52,13 @@
             <br>
             <h3>Ce que j'ai jusque là réalisé</h3>
             <p>Mon jeu consiste en un plateformer 2D dans lequel on incarne un avatar de roi avec une couronne qui doit
-                traverser les niveaux sans mourir. Mon personnage est soumis à la gravité, peut se déplacer de gauche à
-                droite et sauter. La caméra est fixé sur les déplacements du joueur afin de ne pas le perdre de vu. J'ai
-                créer un premier ennemi qui est un serpent qui nous tue si il nous touche mais qui peut être éliminé en
-                sautant sur sa tête de la même manière que Super Mario Bros. Je travaille encore activement avec le
-                tutoriel pour apprendre plus et ajouter plus d'éléments dans le jeu.</p>
+                traverser les niveaux sans mourir. Mon personnage est soumis à la gravité, il peut se déplacer de gauche
+                à
+                droite et sauter. La caméra est fixée sur les déplacements du joueur afin de ne pas le perdre de vu.
+                J'ai
+                créé un premier ennemi: un serpent qui nous tue s'il nous touche mais qui peut être éliminé en
+                sautant sur sa tête comme Mario sur les Goombas. Je travaille encore activement avec le
+                tutoriel pour apprendre plus et ajouter d'autres éléments dans le jeu.</p>
             <br>
             <p>Voici une capture du jeu fonctionnant:</p>
             <img src="imagesTutoUnity/GameView.png">
@@ -67,15 +69,15 @@
             <img src="imagesTutoUnity/ProjetUnity.png" style="height: 600px; width: 1000px;">
             <br>
             <br>
-            <p>Voici mon personnage et ces composants (hitbox, script,...)</p>
+            <p>Voici mon personnage et ses composants (hitbox, script,...)</p>
             <img src="imagesTutoUnity/PlayerVue.png" style="height: 600px; width: 1000px;">
             <br>
             <br>
-            <p>Extrait du Script permettant au joueur d'effectuer ces déplacements:</p>
+            <p>Extrait du Script permettant au joueur d'effectuer ses déplacements:</p>
             <img src="imagesTutoUnity/Script PlayerMovement1.png" style="height: 600px; width: 1000px;">
             <br>
             <br>
-            <p>Voici le Serpent (ennemi) et ces composants (vous pouvez également voir le petit rectangle correspondant
+            <p>Voici le Serpent (ennemi) et ses composants (vous pouvez également voir le petit rectangle correspondant
                 à la hitbox de dégâts du serpent):</p>
             <img src="imagesTutoUnity/SerpentVue.png" style="height: 600px; width: 1000px;">
             <br>
