--- a/Projet_Cours.html
+++ b/Projet_Cours.html
@@ -45,46 +45,47 @@
         <div class="Projets">
             <div class="project">
                 <h3>AP 4 : Conception d'une application web</h3>
-                <p class="description">En liens avec l'AP précédent et en me trouvant un nouveau groupe de travail, nous
-                    avons travaillé sur une application pour smartphone pour le magasin ALL4SPORT afin de permettre aux
+                <p class="description">En lien avec l'AP précédent et en me trouvant un nouveau groupe de travail, nous
+                    avons oeuvré sur une application pour smartphone pour le magasin ALL4SPORT afin de permettre aux
                     utilisateurs de se connecter avec leurs comptes clients et visualiser les articles comme sur le
                     site.</p>
                 <a href="ap4.html">
-                    <p>Cliquez ici pour plus de détail sur l'AP 4</p>
+                    <p>Cliquez ici pour plus de détails sur l'AP 4</p>
                 </a>
             </div>
             <br>
             <div class="project">
                 <h3>AP 3 : Réalisation d'un site de vente en ligne</h3>
-                <p class="description">En groupe d'élève allant de 2 à 4 (même si des problèmes on fait que j'ai dû
+                <p class="description">En groupe d'élèves allant de 2 à 4 (même si des problèmes on fait que j'ai dû
                     finir le projet seul), nous avons eu pour mission de réaliser un site de vente en ligne pour une
-                    entreprise fictive nommé "ALL4SPORT". Il fallait réaliser le site en ayant recourt à une base de
+                    entreprise fictive nommée "ALL4SPORT". Il fallait réaliser le site en ayant recourt à une base de
                     données et utiliser le langage PHP pour réaliser les connexions.</p>
                 <a href="ap3.html">
-                    <p>Cliquez ici pour plus de détail sur l'AP 3</p>
+                    <p>Cliquez ici pour plus de détails sur l'AP 3</p>
                 </a>
             </div>
             <br>
             <div class="project">
-                <h3>AP 2 : Réalisation d'une application de gestion de remboursement</h3>
-                <p class="description">Pour la première fois réuni en travaux de groupe, nous avons eu pour mission de
-                    concevoir une application permettant de traiter les remboursement
-                    accordé aux salariés d'une entreprise. Nous avons eu recourt à de la conception de base de données,
-                    de programmation en Java et de l'utilisation de SceneBuilder pour créer l'interface.
+                <h3>AP 2 : Réalisation d'une application de gestion de remboursements</h3>
+                <p class="description">Pour la première fois réunis en travaux de groupe, nous avons eu pour mission de
+                    concevoir une application permettant de traiter les remboursements de frais
+                    accordés aux salariés d'une entreprise. Nous avons eu recours à de la conception de base de
+                    données,
+                    de la programmation en Java et l'utilisation de SceneBuilder pour créer l'interface.
                 </p>
                 <a href="ap2.html">
-                    <p>Cliquez ici pour plus de détail sur l'AP 2</p>
+                    <p>Cliquez ici pour plus de détails sur l'AP 2</p>
                 </a>
             </div>
             <br>
             <div class="project">
                 <h3>AP 1 : Réalisation du Portfolio et du CV</h3>
-                <p class="description">Il nous à été confié la tâche de réaliser nos portfolios et notre CV. La
-                    réalisation de ces deux éléments sont crucials pour acquérir l'opportunité de réaliser des demandes
-                    d'emploi et obtenir des rôles dans les domaines en accords avec notre parcour d'étude.
+                <p class="description">Il nous a été confié la tâche de réaliser nos portfolios et notre CV. La
+                    réalisation de ces deux éléments sont cruciaux pour acquérir l'opportunité de réaliser des demandes
+                    d'emploi et obtenir des rôles dans les domaines en accord avec notre parcours d'études.
                 </p>
                 <a href="ap1.html">
-                    <p>Cliquez ici pour plus de détail sur l'AP 1</p>
+                    <p>Cliquez ici pour plus de détails sur l'AP 1</p>
                 </a>
             </div>
             <br>
