--- a/Projets_Perso.html
+++ b/Projets_Perso.html
@@ -44,26 +44,27 @@
         <section class="projet-content"></section>
         <div class="Projets">
             <div class="project">
-                <h3>Apprentissage de Unity à travers d'un tutoriel Youtube</h3>
-                <p class="description">Afin de commencer à réaliser de véritable jeu avec graphisme, je me suis lancé
-                    dans l'installation et le suivit d'un tutoriels Unity. Ainsi je suis à la lettre une suite de vidéo
-                    réalisé sur la chaîne "Tuto Unity FR" afin d'apprendre à utiliser Unity en commençant par le
+                <h3>Apprentissage du moteur de jeux Unity au travers d'un tutoriel Youtube</h3>
+                <p class="description">Afin de commencer à réaliser de véritables jeux avec graphismes, je me suis lancé
+                    dans l'installation et le suivi d'un tutoriel Unity. Ainsi je suis à la lettre une suite de vidéos
+                    réalisées sur la chaîne "Tuto Unity FR" afin d'apprendre à utiliser Unity en commençant par le
                     développement d'un jeu 2D.
                 </p>
                 <a href="Project_TutoUnity.html">
-                    <p>Cliquez ici pour plus de détail sur mon apprentissage de Unity</p>
+                    <p>Cliquez ici pour plus de détails sur mon apprentissage de Unity</p>
                 </a>
                 <br>
             </div>
             <div class="project">
                 <h3>Réalisation d'un jeu de blackJack en Java</h3>
-                <p class="description">Pour m'améliorer en java sur la création et l'utilisation d'objet et me divertir,
-                    j'ai créer un jeu de blackjack en Java. On peut ainsi miser
-                    des jetons et jouer des tours contre un croupier virtuelle et voir notre déficit ou bénéfice
+                <p class="description">Pour m'améliorer en java sur la création et l'utilisation d'objets et me
+                    divertir,
+                    j'ai créé un jeu de blackjack en Java. On peut ainsi miser
+                    des jetons et jouer des tours contre un croupier virtuel et voir notre déficit ou bénéfice
                     augmenter au cours des plusieurs parties que nous pouvons jouer.
                 </p>
                 <a href="Projet_BlackJackJava.html">
-                    <p>Cliquez ici pour plus de détail sur le jeu de blackjack</p>
+                    <p>Cliquez ici pour plus de détails sur le jeu de blackjack</p>
                 </a>
             </div>
             <br>
