--- a/Stage2022.html
+++ b/Stage2022.html
@@ -45,46 +45,47 @@
                 appelé "EuroAnimalerie". Il m'a été confié de travailler sur la modification du site hébergé sur
                 Prestashop pour qu'il corresponde aux attentes de la société.</p>
             <h3>Découverte et apprentissage de Prestashop</h3>
-            <p>Pour pouvoir travailler sur les modifications de Prestashop, j'ai dû me former en autonomie pour
+            <p>Pour pouvoir travailler sur les modifications de Prestashop, j'ai dû me former en autonomie afin de
                 comprendre son fonctionnement et ainsi être en capacité d'apporter des modifications.</p>
 
             <p>J'ai découvert que Prestashop est spécialisé dans la conception et la gestion de site de commerce. On
                 peut
-                facilement gérer les stocks mis en vente sur le site grâce à une base de donnée généré automatiquement,
+                facilement gérer les stocks mis en vente sur le site grâce à une base de données générée
+                automatiquement,
                 on peut gérer les livraisons et les réductions sur les produits</p>
             <h3>Les missions qui m'ont été confiées</h3>
             <ul>
-                <li>- Modifier le thème utilisé pour le site pour que cela correspondent aux attentes de l'entreprise.
+                <li>- Modifier le thème utilisé par le site pour que cela correspondent aux attentes de l'entreprise.
                 </li>
                 <li>- Ajouts et modifications des modules sur les différentes pages.</li>
                 <li>- Ajout de la bannière sur les pages du site</li>
             </ul>
 
             <h3>Fonctionnement par modules</h3>
-            <p>Les éléments sur Prestashop fonctionne avec un système de "modules" qui apparaissent selon l’ordre dans
+            <p>Les éléments sur Prestashop fonctionnent avec un système de "modules" qui apparaissent selon l’ordre dans
                 lesquels ils ont été placé. Pour accéder aux positionnements de ces derniers il faut aller dans la
                 section PERSONNALISER dans l’onglet Positions. C’est ici que l’on peut choisir l’emplacement des
-                différents modules et dans quels parties du site web elles se situent (corp de page, header, footer,…).
-                Il faut ainsi trouver à quel groupement fait référence chaque positions et y placer les modules que l’on
-                désir ajouter ou supprimer de celle-ci. On peut ainsi modifier l’emplacement des modules mais le plus
-                intéressant et de modifier les modules eux même pour qu’ils affichent ce que l’on veut via les
-                paramètres. Il faut ainsi aller dans la section MODULE dans l’onglet gestionnaire de modules. C’est ici
-                que l’on peut les personnaliser.</p>
-            <p>C'est grâce aux modules que j'ai notamment pu ajouter dans l'entête du site les bouttons "connexions" et
-                "panier" dans l'entête</p>
+                différents modules et dans quelles parties du site web elles se situent (corps de page, header,
+                footer,…).
+                Il faut ainsi trouver à quel groupement fait référence chaque position et y placer les modules que l’on
+                désire ajouter ou supprimer de celle-ci. On peut ainsi modifier l’emplacement des modules mais le plus
+                intéressant et de les modifier pour qu’ils affichent ce que l’on veut via les paramètres. Il faut ainsi
+                aller dans la section MODULE dans l’onglet gestionnaire de modules. C’est ici que l’on peut les
+                personnaliser.</p>
+            <p>C'est grâce aux modules que j'ai notamment pu ajouter dans l'en-tête du site les boutons "connexions" et
+                "panier" dans l'en-tête</p>
 
             <p>Les modules:</p>
             <img src="imagesStage2022/prestashop-position-modules.PNG" style="height: 650px; width: 950px;">
             <br>
             <h3>Modification du thème</h3>
             <p>Afin de définir la forme générale du site et son contenu, Prestashop applique un thème lors de la
-                création du site. Par défaut il applique le thème "classic" mais d'autres thèmes payant allant de 60 à
-                200 euros peuvent être acheté pour être appliqué pour se faciliter la tâche de la personnalisations et
-                avoir instantanément une apparence s'approchant du styles de boutiques. Pour ne pas avoir à dépenser de
-                l'argent dans un thème on peut également personnaliser le thème de base en créant une version parallèle
-                modifiable du thème appelé "thème-enfant". C'est par le billet d'un thème enfant que j'ai pu apporter
-                des modifications au site comme la taille du logo et l'emplacement d'autres éléments dans un fichier css
-                additionnel.</p>
+                création du site. Par défaut il applique le thème "classic" mais d'autres thèmes payants allant de 60 à
+                200 euros peuvent être acheté pour être appliqué et se faciliter la tâche de la personnalisation et
+                avoir instantanément une apparence s'approchant du style de boutique. Pour ne pas avoir à dépenser de
+                l'argent dans un thème on peut également personnaliser celui de base en créant une version parallèle
+                modifiable appelé "thème-enfant". C'est par ce biais que j'ai pu apporter des modifications au site
+                comme la taille du logo et l'emplacement d'autres éléments dans un fichier css additionnel.</p>
             <br>
 
             <p>Menu des thèmes Prestashop:</p>
@@ -95,10 +96,10 @@
             <img src="imagesStage2022/prestashop-thèmeenfant.PNG" style="height: 550px; width: 1000px;">
             <br>
             <p>Par ailleurs, cette partie et celle qui m'a demandé le plus de patience et de recherche car
-                l'implémentation et la modification du thème enfant générait beaucoup d'erreur et de problème que j'ai
+                l'implémentation et la modification du thème enfant générait beaucoup d'erreurs et de problèmes que j'ai
                 dû régler en me renseignant sur internet. J'ai même eu la réponse d'un vidéastre en commentaire qui m'a
                 permis de corriger les problèmes d'actualisations du thème que je rencontrais.</p>
-            <p>Là réponse:</p>
+            <p>La réponse:</p>
             <img src="imagesStage2022/Réponse_yt.PNG" style="height: 550px; width: 830px;">
             <br>
             <br>
