--- a/Stage2023.html
+++ b/Stage2023.html
@@ -40,11 +40,10 @@
         <header>
             <h1>Stage 2023</h1>
             <h3>Résumé</h3>
-            <p>Dans le cadre de ma seconde année de BTS SIO, j'ai pu retravailler avec t'entreprise Louise&Co. de faire
-                un stage pour la société Louiseenco. Cette fois ci j'ai travaillé sur un autre site de vente intitulé
-                "mon-coin-zero-dechet.com" qui est un autre site de vente en ligne mais celui ci est géré par Wordpress.
-                Ce site à pour but de vendre des articles d'hygiènes éco-responsables en tout genre (hygiène dentaire,
-                maquillage,...)
+            <p>Dans le cadre de ma seconde année de BTS SIO, j'ai été repris par l'entreprise Louise&Co. Cette fois-ci
+                j'ai travaillé sur un site intitulé "mon-coin-zero-dechet.com".C'est un site de vente en ligne conçu
+                avec Wordpress. Ce site à pour but de vendre des articles d'hygiènes éco-responsables en tout genre
+                (hygiène dentaire, maquillage,...)
             </p>
             <h3>Les missions qui m'ont été confiées</h3>
             <ul>
@@ -54,15 +53,15 @@
             <h3>L'ajout d'article via Woocommerce</h3>
             <p>Afin de réaliser un site de vente avec Wordpress, on utilise l'extension Woocommerce pour prendre en
                 charge la création et la publication des articles. Ainsi Woocommerce génére une base de données que l'on
-                peut remplir des différents articles que l'on souhaite vendre sur le site.</p>
-            <p>Menu affichant tout les produits enregistrés:</p>
+                peut remplir avec les différents articles que l'on souhaite vendre sur le site.</p>
+            <p>Menu affichant tous les produits enregistrés:</p>
             <img src="imagesStage2023/AffichateListeProduits.PNG" style="height: 550px; width: 1130px;">
             <br>
-            <p>Pour chaque article il faut resecencer toute ces données:</p>
+            <p>Pour chaque article il faut recenser toutes ces données:</p>
             <ul>
-                <li>- Le nom du produit</li>
-                <li>- L'image du produit</li>
-                <li>- Les images de la galleries du produit (les images additionnelles)</li>
+                <li>- Le nom</li>
+                <li>- L'image</li>
+                <li>- Les images de la galerie (les images additionnelles)</li>
                 <li>- La description</li>
                 <li>- La catégorie</li>
                 <li>- Les attributs (Les différents modèles possibles comme des tailles, couleurs,...)</li>
@@ -73,31 +72,34 @@
             <p>Menu permettant d'ajouter des images aux produits:</p>
             <img src="imagesStage2023/GallerieImageArticle.png" style="height: 550px; width: 1130px;">
             <br>
-            <p>J'ai également définit les attributs afin de les ajouter aux articles qui en avait besoin. Par exemple le
-                magasin vend plusieurs modèles de coton-tiges réutilisables avec des couleurs différents donc plutôt que
-                de créer des articles différents dans la base de donnée pour chaque couleur, j'ai créer un attribut
-                "couleur de coton-tiges" qui permet aux acheteurs de directement sélectionner la couleur souhaité sur la
-                page de l'article.</p>
+            <p>J'ai également défini les attributs afin de les ajouter aux articles qui en avaient besoin. Par exemple
+                le
+                magasin vend plusieurs modèles de coton-tiges réutilisables avec des couleurs différentes donc plutôt
+                que
+                de créer des articles différents dans la base de données pour chaque couleur, j'ai créé un attribut
+                "couleur de coton-tiges" qui permet aux acheteurs de sélectionner la couleur souhaitée sur la page de
+                l'article.</p>
             <p></p>
             </p>
-            <p>Woocommerce nous permet même de modifier l'affichage des pages de chaque articles via les réglages Astra:
+            <p>Woocommerce nous permet même de modifier l'affichage des pages de chaque article via les réglages Astra:
             </p>
             <img src="imagesStage2023/Réglage_Astra.PNG">
             <br>
             <br>
             <h3>La création et modification des pages</h3>
-            <p>Autant pour réaliser un site de vente qu'autre type de site, l'outil Elementor de Wordpress est un outil
+            <p>Autant pour réaliser un site de vente qu'un autre type de site, l'outil Elementor de Wordpress est un
+                outil
                 parfait pour concevoir facilement des pages pour le site. Elementor permet d'ajouter le contenu bloc par
-                bloc sur le site via différents éléments sélectionnable dans la banque d'élément de Elementor.
+                bloc sur le site via différents éléments sélectionnables dans la banque d'éléments d'Elementor.
                 L'entreprise ayant la licence Pro, j'ai eu accès à des éléments plus sophistiqués, notamment des
-                éléments spécialement dédié pour Woocommerce.</p>
+                éléments spécialement dédiés pour Woocommerce.</p>
 
-            <p>Ajout des articles sur la page d'acceuil du site:</p>
+            <p>Ajout des articles sur la page d'accueil du site:</p>
             <img src="imagesStage2023/ElementorCatégorie.png" style="height: 550px; width: 1130px;">
             <br>
             <br>
             <p>Malheureusement Elementor ne permet pas d'améliorer le haut et pied de page. Pour le modifier j'ai donc
-                du passer par la modification du thème de Wordpress:</p>
+                dû passer par la modification du thème de Wordpress:</p>
             <img src="imagesStage2023/Elementor_footer_acceuil.png" style="height: 550px; width: 1130px;">
     </section>
 
