--- a/StageSelect.html
+++ b/StageSelect.html
@@ -37,26 +37,25 @@
     </nav>
 
     <section class="page-content">
-        <h1>Stage première année BTS SIO - 2022</h1>
-        <p class="description">Ce stage m'a donné l'occasion de travailler pour l'entreprise Louiseenco pour travailler
-            sur un site en maintenance hebergé et géré par Prestashop. Ainsi j'ai eu l'opportunité de découvrir
-            Prestashop, travailler sur un site de vente fonctionnant sous Prestashop et d'en les avantages et
-            les inconvéniants à utiliser Prestashop pour un site internet.
-        </p>
-        <br>
-        <br>
-        <a href="Stage2022.html">
-            <p>Cliquez ici pour plus de détail sur le stage de 2022</p>
-        </a>
         <h1>Stage deuxième année BTS SIO - 2023</h1>
         <p class="description">J'ai eu l'occasion de retravailler pour l'entreprise Louiseenco dans le cadre de la
-            maintenance d'un tout autre site de vente créer avec Wordpress. Lors de se stage j'ai eu l'occasion
-            d'amplifier mes connaissances sur le fonctionnement de Wordpress et de découvrir l'extension WooCommerce qui
-            permet de faire de la vente via un site fonctionnant par Wordpress.
+            maintenance d'un tout autre site de vente créer avec Wordpress. Lors de ce stage j'ai amplifié mes
+            connaissances sur le fonctionnement de Wordpress et découvert l'extension WooCommerce qui
+            permet de faire de la vente via un site fonctionnant avec Wordpress.
         </p>
         <br>
         <a href="Stage2023.html">
-            <p>Cliquez ici pour plus de détail sur le stage de 2023</p>
+            <p>Cliquez ici pour plus de détails sur le stage de 2023</p>
+        </a>
+        <h1>Stage première année BTS SIO - 2022</h1>
+        <p class="description">Ce stage m'a donné l'occasion de travailler pour l'entreprise Louiseenco pour effectuer
+            des améliorations sur le site en maintenance hebergé et géré par Prestashop. Ainsi j'ai eu l'opportunité de
+            découvrir Prestashop et connaître les avantages et les inconvénients d'utiliser cette application pour créer
+            et gérer un site de vente.
+        </p>
+        <br>
+        <a href="Stage2022.html">
+            <p>Cliquez ici pour plus de détails sur le stage de 2022</p>
         </a>
     </section>
 
