--- a/ap1.html
+++ b/ap1.html
@@ -40,7 +40,7 @@
         <header>
             <h1>AP1: Réalisation CV et Portfolio</h1>
             <h3>Objectif</h3>
-            <p>Avoir un CV et un Portfolio régulièrement à jour est important. Ces deux éléments à jours permettent de
+            <p>Avoir un CV et un Portfolio régulièrement à jour est important. Ces deux éléments à jour permettent de
                 mettre en avant son créateur et de montrer les véritables atouts dont il dispose pour être à la hauteur
                 d'une formation ou d'un poste dans une entreprise.</p>
 
@@ -49,39 +49,39 @@
                 minimalisme, désormais les CV sont numérisés et moderne.</p>
 
             <p>Afin d'avoir un CV assez joli sans avoir de
-                difficulté avec la mise en page et d'encodage de document, j'ai décidé d'utiliser le site "Canvas.com",
-                qui permet de réaliser sans trop de difficulté de beau CV en s'appuyant sur des templates réadaptables
+                difficulté avec la mise en page et l'encodage de document, j'ai décidé d'utiliser le site "Canvas.com",
+                qui permet de réaliser sans trop de difficulté de beaux CV en s'appuyant sur des templates réadaptables
                 aux besoins. Ainsi j'ai pu le réaliser, le modifier en prenant en compte des conseils de mes
-                enseignants, et l'enregistrer sous plusieurs format notamment en PNG pour pouvoir le faire apparaître
+                enseignants, et l'enregistrer sous plusieurs formats notamment en PNG pour pouvoir le faire apparaître
                 sur mon portfolio.</p>
 
-            <p>Le site Canva: </p>
+            <p>Le site Canvas: </p>
 
             <img src="images/Canva.PNG" style="height: 550px; width: 1080px;">
 
             <br>
 
             <h3>La réalisation du Portfolio</h3>
-            <p>Le portfolio est un atout indispensable pour trouver du travail, mais un portfolio permet, à travers le
+            <p>Le portfolio est un atout indispensable pour trouver du travail et un portfolio permet, à travers le
                 format web, d'apporter encore plus d'informations à son sujet tout en l'illustrant et en démontrant
                 notre savoir faire.</p>
             <p>Il existe de nombreuses manières de créer et héberger notre portfolio sans avoir forcèment à dépenser de
                 l'argent. Au début je voulais avoir recourt à 000webhost, un service en ligne qui permet d'héberger son
                 portfolio sur un serveur et de le créer et modifier à distance par Wordpress. Cela me semblait être une
                 bonne idée de part la facilité à mettre les choses en place et les fonctionnalités suffisantes
-                qu'apporte l'offre gratuite. Mais les problèmes d'accès que j'ai rencontré et les risques que tout soit
-                archivé définitivement était trop risqué.</p>
-            <p>Ainsi j'ai préféré me tourné vers quelque chose que je connaissait déjà : Github. Avec Github j'ai pu
-                effectuer un repository qui permet de contenir tout mes fichiers web (html et css) et de rentre mon
-                portfolio statique visible par un lien github 24h/24. Ainsi je ne peut pas avoir recourt à un cms comme
-                Wordpress. Le portfolio que vous avez actuellement sous les yeux à été intégralement codé par moi même
+                qu'apporte l'offre gratuite. Mais les problèmes d'accès que j'ai rencontrés et les risques que tout soit
+                archivé définitivement étaient trop risqués.</p>
+            <p>Ainsi j'ai préféré me tourner vers quelque chose que je connaissais déjà : Github. Avec Github j'ai pu
+                effectuer un repository qui permet de contenir tous mes fichiers web (html et css) et rendre mon
+                portfolio statique visible par un lien github 24h/24. Ainsi je ne peux pas avoir recours à un cms comme
+                Wordpress. Le portfolio que vous avez actuellement sous les yeux a été intégralement codé par moi-même
                 avec mon savoir faire et quelques éléments dont je me suis inspiré d'internet.</p>
             <br>
             <p>Quelques captures de mon code:</p>
-            <p>Mon entête:</p>
+            <p>Mon en-tête:</p>
             <br>
             <img src="imagesAP1/entete.PNG" style="height: 625px; width: 1080px;">
-            <p>Ma page d'acceuil:</p>
+            <p>Ma page d'accueil:</p>
             <img src="imagesAP1/pageindex.PNG" style="height: 625px; width: 1080px;">
             <br>
             <p>Mon fichier CSS:</p>
