--- a/ap4.html
+++ b/ap4.html
@@ -41,15 +41,15 @@
             <h1>AP4: Conception d'une application web</h1>
             <h3>Objectif</h3>
             <p>Aux côtés de trois autres camarades de projet, nous devons réaliser une application mobile via
-                AndroidStudio. Cette application codé en Java doit permettre aux clients utilisant l'application de se
-                connecter avec son compte client, de pouvoir scanner les QR code des articles afin de voir apparaître
-                leur descriptions et également pouvoir utiliser la géolocalisation afin que l'application puisse faire
+                AndroidStudio. Cette application codée en Java doit permettre aux clients utilisant l'application de se
+                connecter avec leur compte, de pouvoir scanner les QR codes des articles afin de voir apparaître
+                leur description et également pouvoir utiliser la géolocalisation afin que l'application puisse faire
                 apparaître le magasin ALL4SPORT le plus proche de l'utilisateur. Il nous faudra également réaliser un
                 webservice à partir du code source de votre projet web AP3 afin de récupérer les informations envoyées
                 par l’application mobile et mettre à jour la liste des commandes du magasin.
             </p>
             <h3>Actuellement en cours...</h3>
-            <p>Nous sommes actuellement en train de travailler sur ce projet, ainsi peu de choses sont finalisés. Je
+            <p>Nous sommes actuellement en train de travailler sur ce projet, ainsi peu de choses sont finalisées. Je
                 peux tout de même afficher quelques captures.</p>
             <br>
             <p>Voici l'interface d'Android Studio:</p>
