--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <h3>Mon projet d'avenir</h3>
             <p>En commençant mon BTS j’avais l’ambition de devenir concepteur de site web. Mais je me suis rendu compte
                 que le domaine du développement web ne m’intéressait pas autant que je l’aurais espéré et que je
-                m’épanouissait bien plus en développant des petits jeux en Java. Étant moi-même un passionné de jeux
+                m’épanouissais bien plus en développant des petits jeux en Java. Étant moi-même un passionné de jeux
                 vidéos et ayant un véritable engouement pour la programmation orientée objet, je souhaiterais désormais
                 pouvoir devenir développeur dans le domaine des jeux vidéos.</p>
 
-            <h3>Mes connaissances en programmations/informatiques</h3>
+            <h3>Mes connaissances en programmation/informatique</h3>
             <ul>
                 <li>- Unity (J'ai étudié les bases en auto-apprentissage via des tutoriels sur internet)</li>
                 <li>- Programmation Logiciel : Java, Scenebuilder, AndroidStudio</li>
@@ -80,14 +80,15 @@
 
         <h3>Mes Loisirs</h3>
         <ul>
-            <li>- Je joue très souvent aux jeux vidéos. Je joue à beaucoup de styles de jeu différent mais mes préférés
-                restent les FPS coopératifs et solo, les RPG et les jeux d’horreurs. Mon jeu favori est Bioshock, mais
-                vous pouvez voir mes jeux préférés par catégorie en <a href="mesJeux.html">cliquant sur ce lien.</a>
+            <li>- Je joue très souvent aux jeux vidéos. Je joue à différents styles de jeux mais ceux que j'apprécie le
+                plus restent les FPS coopératifs et solo, les RPG et les jeux d’horreurs. Mon jeu favori est Bioshock,
+                mais vous pouvez voir mes jeux préférés par catégorie en <a href="mesJeux.html"><B>cliquant sur ce
+                        lien.</B></a>
             </li>
             <br>
-            <li>- Je développe par passion, essayant de réaliser des petits jeux sans interface graphique en Java.</li>
+            <li>- Je développe par passion, essayant de réaliser des petits jeux en Java ou Unity.</li>
             <br>
-            <li>- Je joue de la guitare basse lorsque j’en ai l’occasion. Je m’entraîne en jouant des morceaux de Rock
+            <li>- Je joue de la guitare basse lorsque j’en ai le temps. Je m’entraîne en jouant des morceaux de Rock
                 en tout genre. Je sais notamment jouer Down Under de Men at Work.</li>
             <br>
             <li>- Je réalise des montages vidéos sur le logiciel VegasPro13.</li>
